fix fdo#63053 ampersand in document title causes corrupt docx

FILESAVE, FILEOPEN: ampersand in document title causes corrupt docx when saving; truncates title when loading